# doc-qna

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  railway.json  setup.sh  wrangler.toml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __main__.py  cli.py  config.py  main.py
backend/app/core/: auth.py  constants.py  exceptions.py  models.py  overlay.py  startup.py
backend/app/data/: prompt_presets.json
backend/app/middleware/: __init__.py  auth.py  errors.py  logging.py  rate_limit.py  timing.py
backend/app/packs/: __init__.py  builder.py  installer.py  models.py  reader.py  registry.py
backend/app/parsers/: __init__.py  docx.py  markdown.py  pdf.py
backend/app/plugins/: __init__.py  base.py  loader.py  pipeline.py  query_rewriter.py  registry.json
backend/app/providers/: anthropic_provider.py  base.py  chromadb_embedder.py  embedder.py  ollama.py  ollama_embedder.py  ollama_utils.py  openai_provider.py
backend/app/routers/: __init__.py  chat.py  documents.py  metrics.py  packs.py  plugins.py  settings.py
backend/app/schemas/: __init__.py  chat.py  documents.py  packs.py  plugins.py  settings.py
backend/app/services/: __init__.py  bm25.py  cache.py  chunking.py  confidence.py  document_store.py  evaluation.py  generation.py  ingestion.py  metrics.py  retrieval.py  summarization.py  vectorstore.py
backend/eval/: README.md  conftest.py  golden_dataset.json  test_rag_quality.py
backend/plugins/: pii_redactor.py  registry.json  reranker.py  summarizer.py
backend/tests/: test_chunking.py  test_cli.py  test_cli_config.py  test_cli_eval.py  test_cli_ingest.py  test_cli_pack.py  test_cli_query.py  test_cli_serve.py  test_cli_status.py  test_confidence.py  test_document_store.py  test_integration.py  test_metrics.py  test_models.py  test_pack_installer.py  test_pack_registry.py  test_pack_versioning.py  test_packs.py  test_packs_api.py  test_page_citations.py  test_parsers.py  test_plugin_base.py  test_plugin_config.py  test_plugin_pii_redactor.py  test_plugin_pipeline.py  test_plugin_query_rewriter.py  test_plugin_reranker.py  test_plugin_summarizer.py  test_plugin_trace_sse.py  test_plugins.py  test_plugins_api.py  test_presets.py  test_settings.py  test_summarization.py  test_v13.py  test_v14_plugins.py  test_v15_packs.py
demo_data/: README.md  machine-learning-basics.md  project-management-guide.txt
deploy/: README.md
docs/: README.md  docusaurus.config.ts  sidebars.ts
docs/docs/: intro.md
docs/docs/api/: endpoints.md  streaming-sse.md
docs/docs/architecture/: overview.md  providers.md  rag-pipeline.md
docs/docs/configuration/: embedding-providers.md  environment-variables.md  llm-providers.md
docs/docs/deployment/: cloud.md  docker.md
docs/docs/development/: ci-cd.md  contributing.md  evaluation.md  testing.md
docs/docs/frontend/: embeddable-widget.md  overview.md
docs/docs/getting-started/: installation.md  project-structure.md  quickstart.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.widget.config.ts
frontend/src/: App.tsx  index.css
functions/api/: chat.ts  health.ts  packs.ts  plugins.ts  types.ts
packs/: registry.json
packs/ml-basics/: manifest.json  suggested_queries.json
packs/python-basics/: manifest.json  suggested_queries.json
scripts/: validate_pack.py
(+79 files in other folders)
